# lightdpi

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-windows-mingw32.yml  cmake-windows.yml
include/curl/: curl_config.h
include/lightdpi/: exceptions.hpp  lightdpi.hpp  params.hpp  utils.hpp
include/lightdpi/common/: buffer.hpp  inbuffer.hpp  packet.hpp  windivertwrapper.hpp
include/lightdpi/dns/: dnsresolver.hpp  doh.hpp
include/lightdpi/modifiers/: fake.hpp  fakeack.hpp  fakechecksum.hpp  fakettl.hpp  modifier.hpp
include/lightdpi/net/: checksum.hpp  ip.hpp  tcp.hpp  udp.hpp
include/wolfssl/: config.h  options.h
lightdpi/: lightdpi.cxx  utils.cxx
lightdpi-cli/: cli.cxx  config.cxx  config.hpp  exceptions.hpp
lightdpi/common/: buffer.cxx  packet.cxx  windivertwrapper.cxx
lightdpi/dns/: doh.cxx
lightdpi/internal/: data.cxx  data.hpp  helpers.cxx  helpers.hpp  logger.hpp
lightdpi/modifiers/: fakeack.cxx  fakechecksum.cxx  fakettl.cxx
lightdpi/net/: checksum.cxx
